--- a/assets/css/auth-style.css
+++ b/assets/css/auth-style.css
@@ -68,9 +68,10 @@ input[placeholder], [placeholder], *[placeholder] {
   display: none;
   position: absolute;
   background-color: #d6ffe8;
-  min-width: 120px;
+  min-width: 130px;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
   border-radius: 3px;
+  right: 10px;
 }
 .dropdown-content a {
   color: black;
@@ -110,4 +111,9 @@ header .logo-box h3.page-title {
 }
 #main .preview {
   margin-top: 9px;
+}
+
+.menu-icons {
+  width: 0px;
+  height: 0px;
 }
